[CRD iOS] Fixing an infinite layout loop

On iOS 9, it seems the [self updateFABConstraintsAnimated:NO] call in
viewDidLayoutSubviews and [self layoutIfNeeded] call in
updateFABConstraintsAnimated causes an infinite layout loop, which
crashes the app right after the HostViewController appears due to
stack overflow.

This CL fixes this problem by removing the
updateFABConstraintsAnimated: call from viewDidLayoutSubviews.


Bug: 769533
Change-Id: I311d9168db4bcae097455eb27a908c086de71572
Reviewed-on: https://chromium-review.googlesource.com/687829
Reviewed-by: Scott Nichols <nicholss@chromium.org>
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Cr-Commit-Position: refs/heads/master@{#505152}
Former-commit-id: d39cc7742f8cd08f9a94815477e114157fa39c30